# QuAcK

./: .gitmodules  CMakeLists.txt  INSTALL.txt  Makefile  Makefile.am  Makefile.am.numgrid  autobuild.sh  cmake.sh  configure.ac  install_numgrid.sh.in  update_cmakelists.sh
input/: methods
qcaml-tools/: GoDuck.ml  install_qcaml.sh
src/: CMakeLists.txt  script_dir.sh
src/ADC/: Makefile.am.include
src/AOtoMO/: Makefile.am.include
src/BasCor/: Makefile.am.include
src/CC/: Makefile.am.include
src/CI/: Makefile.am.include
src/GF/: Makefile.am.include
src/HF/: Makefile.am.include
src/LR/: Makefile.am.include
src/MBPT/: Makefile.am.include
src/MC/: Makefile.am.include
src/MP/: Makefile.am.include
src/QuAcK/: Makefile.am.include  QuAcK.f90
src/RPA/: Makefile.am.include
src/eDFT/: Makefile.am.include
src/numgrid/: Makefile.am.include
src/utils/: Makefile.am.include
